-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.14
-
-
3b8e8bd08 (dev), a8eaa0c5a (6.8), bd5e945e1 (tqtc/lts-6.5), 269aedaef (tqtc/lts-6.2), c000d9a8b (tqtc/lts-5.15)
-
2023wk40FOQtforAndroid, 2023wk52FOQtforAndroid, 2024wk18FOQtforAndroid, 2024wk22s2FOQtforAndroid, 2024wk24s2FOQtforAndroid, 2024wk26s2FOQtforAndroid, 2024wk38s2FOQtforAndroid, 2024wk32s2FOQtforAndroid, 2024wk36s2FOQtforAndroid, 2024wk40s3FOQtforAndroid, 2024wk42s3FOQtforAndroid
Android 11 and above gives the error when removeStaleLock is called. When app crashes or is closed witha swipe gesture (unlock not called) lock file is not removed leaving a "dangling" lock file that can be manually deleted but does not ever get removed by Qt. It seems that flock is not implemented on Android. Android 10 and below probably also have the same problem but Qt probably does not return it as an error. Qt probably needs to use a different mechanism. See https://bugreports.qt.io/browse/QTBUG-81701. App targets android 10 and uses getExternalFilesDir to create external directory where file to be locked is placed.
setNativeLocks failed: "Function not implemented"
For Gerrit Dashboard: QTBUG-116511 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
567697,17 | QLockFile: Use fcntl for file locking on Android | dev | qt/qtbase | Status: MERGED | +2 | 0 |
599675,2 | QLockFile: Use fcntl for file locking on Android | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
599848,2 | QLockFile: Use fcntl for file locking on Android | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
599994,2 | QLockFile: Use fcntl for file locking on Android | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
600002,2 | QLockFile: Use fcntl for file locking on Android | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |